examples/test/testpolicy2326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2326
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key38: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value24
      podSelector:
        matchLabels:
          key4: value0
          key22: value23
          key31: value19
